home banner mobile horizontal overflow fix

--- a/assets/scss/components/_home-banner.scss
+++ b/assets/scss/components/_home-banner.scss
@@ -8,8 +8,8 @@
         }
         @include max(575.98) {
             max-height: 460px;
-            margin-left: calc(var(--#{$variable-prefix}gutter-x) * -1);
-            margin-right: calc(var(--#{$variable-prefix}gutter-x) * -1);
+            margin-left: calc(var(--#{$variable-prefix}gutter-x) * -0.5);
+            margin-right: calc(var(--#{$variable-prefix}gutter-x) * -0.5);
         }
         &::after {
             content: "";
